♻️ refactor(api): 공통 유틸 적용 범위 확대
What changed:
- DTO와 검색 조건의 list/string 정규화를 common.util helper 기준으로 대체했다.
- 공개 API filter count map 변환을 strict value map helper로 정리했다.
- 공통 예외 응답과 trace id 처리도 공통 문자열/collection helper를 사용하도록 맞췄다.

Why:
- 새로 추가한 공통 메서드가 실제 API 코드의 반복 구현을 대체하도록 하기 위해서다.

Evidence:
- git diff --check
- npm run validate:repo
- .\\gradlew.bat :apps:api:test